--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -644,128 +644,133 @@ import "css/price/style_price.css";
           </p>
         </div>
 
-        <div class="full-content_maintenance">
-          <div class="content-1_maintenance">
-            <h3>For Traditional Tank-Style Water Heaters</h3>
+        <div class="description_maintenance">
+          <div class="full-content_maintenance">
+            <div class="content-1_maintenance">
+              <h3>For Traditional Tank-Style Water Heaters</h3>
 
-            <ul>
-              <li>
-                <p><b>Inspecting the Tank and Connections</b></p>
-                <p>
-                  Checking for signs of leaks or corrosion on the tank’s
-                  exterior.
-                </p>
-                <p>
-                  Examining all connections for tightness and signs of wear or
-                  leakage.
-                </p>
-              </li>
+              <ul>
+                <li>
+                  <p><b>Inspecting the Tank and Connections</b></p>
+                  <p>
+                    Checking for signs of leaks or corrosion on the tank’s
+                    exterior.
+                  </p>
+                  <p>
+                    Examining all connections for tightness and signs of wear or
+                    leakage.
+                  </p>
+                </li>
 
-              <li>
-                <p>
-                  <b>
-                    Testing the Temperature-Pressure Relief Valve (TPR Valve)
-                  </b>
-                </p>
-                <p>
-                  Ensuring that it opens freely and does not leak when closed.
-                </p>
-              </li>
+                <li>
+                  <p>
+                    <b>
+                      Testing the Temperature-Pressure Relief Valve (TPR Valve)
+                    </b>
+                  </p>
+                  <p>
+                    Ensuring that it opens freely and does not leak when closed.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Checking the Anode Rod</b></p>
-                <p>
-                  Assessing the anode rod for excessive corrosion and replacing
-                  it if necessary.
-                </p>
-              </li>
+                <li>
+                  <p><b>Checking the Anode Rod</b></p>
+                  <p>
+                    Assessing the anode rod for excessive corrosion and
+                    replacing it if necessary.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Flushing the Tank</b></p>
-                <p>
-                  Draining and flushing out the tank to remove sediment
-                  build-up.
-                </p>
-              </li>
+                <li>
+                  <p><b>Flushing the Tank</b></p>
+                  <p>
+                    Draining and flushing out the tank to remove sediment
+                    build-up.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Adjusting the Thermostat Settings</b></p>
-                <p>
-                  Verifying and adjusting the temperature settings for optimal
-                  performance and safety.
-                </p>
-              </li>
+                <li>
+                  <p><b>Adjusting the Thermostat Settings</b></p>
+                  <p>
+                    Verifying and adjusting the temperature settings for optimal
+                    performance and safety.
+                  </p>
+                </li>
 
-              <li>
-                <p>
-                  <b>Inspecting the Heating Elements (for electric heaters)</b>
-                </p>
-                <p>
-                  Checking for proper operation and replacing any faulty
-                  elements.
-                </p>
-              </li>
+                <li>
+                  <p>
+                    <b>Inspecting the Heating Elements (for electric heaters)</b
+                    >
+                  </p>
+                  <p>
+                    Checking for proper operation and replacing any faulty
+                    elements.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Cleaning the Burner and Ignition (for gas heaters)</b></p>
-                <p>
-                  Cleaning and ensuring proper functionality of the burner and
-                  ignition system.
-                </p>
-              </li>
-            </ul>
-          </div>
+                <li>
+                  <p>
+                    <b>Cleaning the Burner and Ignition (for gas heaters)</b>
+                  </p>
+                  <p>
+                    Cleaning and ensuring proper functionality of the burner and
+                    ignition system.
+                  </p>
+                </li>
+              </ul>
+            </div>
 
-          <div class="content-2_maintenance">
-            <h3>For Tankless Water Heaters</h3>
+            <div class="content-2_maintenance">
+              <h3>For Tankless Water Heaters</h3>
 
-            <ul>
-              <li>
-                <p><b>Cleaning the Air Intake and Ventilation</b></p>
-                <p>Removing any blockages and ensuring proper airflow.</p>
-              </li>
+              <ul>
+                <li>
+                  <p><b>Cleaning the Air Intake and Ventilation</b></p>
+                  <p>Removing any blockages and ensuring proper airflow.</p>
+                </li>
 
-              <li>
-                <p><b>Descale and Flushing the System</b></p>
-                <p>
-                  Descale and flush the heat exchanger to prevent lime scale and
-                  other build-ups.
-                </p>
-              </li>
+                <li>
+                  <p><b>Descale and Flushing the System</b></p>
+                  <p>
+                    Descale and flush the heat exchanger to prevent lime scale
+                    and other build-ups.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Inspecting Water and Gas Connections</b></p>
-                <p>
-                  Checking for any leaks and ensuring all connections are
-                  secure.
-                </p>
-              </li>
+                <li>
+                  <p><b>Inspecting Water and Gas Connections</b></p>
+                  <p>
+                    Checking for any leaks and ensuring all connections are
+                    secure.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Cleaning the Filters</b></p>
-                <p>
-                  Cleaning or replacing filters to maintain proper water flow
-                  and protect internal components.
-                </p>
-              </li>
+                <li>
+                  <p><b>Cleaning the Filters</b></p>
+                  <p>
+                    Cleaning or replacing filters to maintain proper water flow
+                    and protect internal components.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Testing the Burner</b></p>
-                <p>Ensuring smooth and immediate burner ignition.</p>
-              </li>
+                <li>
+                  <p><b>Testing the Burner</b></p>
+                  <p>Ensuring smooth and immediate burner ignition.</p>
+                </li>
 
-              <li>
-                <p><b>Inspecting Electrical Components</b></p>
-                <p>
-                  Checking electrical connections and component functionality.
-                </p>
-              </li>
+                <li>
+                  <p><b>Inspecting Electrical Components</b></p>
+                  <p>
+                    Checking electrical connections and component functionality.
+                  </p>
+                </li>
 
-              <li>
-                <p><b>Examining the Heat Exchanger</b></p>
-                <p>Looking for any signs of corrosion or damage.</p>
-              </li>
-            </ul>
+                <li>
+                  <p><b>Examining the Heat Exchanger</b></p>
+                  <p>Looking for any signs of corrosion or damage.</p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -904,45 +909,14 @@ import "css/price/style_price.css";
             involved, such as the heating element, pressure relief valve, or dip
             tube.
           </p>
-          <p>
-            <b>Type of Water Heater:</b>Gas water heaters and electric water
-            heaters may have different components that fail, such as the pilot
-            light in gas models or heating elements in electric units. Tankless
-            water heaters often have different repair costs compared to
-            traditional tank water heaters due to their distinct technology and
-            construction.
-          </p>
-          <p>
-            <b>Components Needing Repair or Replacement:</b> Common repairs include
-            replacing a faulty heating element, a corroded dip tube, or a malfunctioning
-            gas control valve. Each component has a different cost associated with
-            it, and items like the pressure relief valve or pilot light may require
-            less expensive repairs than more complex parts like the gas control valve.
-          </p>
-          <p>
-            <b>Severity and Location of the Issue:</b>A minor leak might be less
-            costly to address compared to a complete failure of the heating
-            system within the water heater. Additionally, accessibility issues
-            can affect labor costs; a water heater installed in a
-            difficult-to-reach area may increase the overall repair costs due to
-            the extra time and effort needed for the repair.
-          </p>
-          <p>
-            <b>Age and Condition of the Water Heater:</b> Older hot water heaters
-            may be more prone to issues such as sediment buildup, which can affect
-            components like dip tubes and heating elements, leading to more frequent
-            and potentially costly repairs.
-          </p>
-          <p>
-            <b>Improved Safety:</b> Regular maintenance helps identify and address
-            potential safety issues, such as loose electrical connections or damaged
-            components, before they escalate into major problems.
-          </p>
-          <p>
-            Understanding these factors can help homeowners anticipate potential
-            repair costs and make informed decisions about whether to repair or
-            replace a faulty water heater.
-          </p>
+          <ol>
+            <li><b>Type of Water Heater: </b>Gas water heaters and electric water heaters may have different components that fail, such as the pilot light in gas models or heating elements in electric units. Tankless water heaters often have different repair costs compared to traditional tank water heaters due to their distinct technology and construction.</li>
+            <li><b>Components Needing Repair or Replacement: </b>Common repairs include replacing a faulty heating element, a corroded dip tube, or a malfunctioning gas control valve. Each component has a different cost associated with it, and items like the pressure relief valve or pilot light may require less expensive repairs than more complex parts like the gas control valve.</li>
+            <li><b>Severity and Location of the Issue: </b>A minor leak might be less costly to address compared to a complete failure of the heating system within the water heater. Additionally, accessibility issues can affect labor costs; a water heater installed in a difficult-to-reach area may increase the overall repair costs due to the extra time and effort needed for the repair.</li>
+            <li><b>Age and Condition of the Water Heater: </b>Older hot water heaters may be more prone to issues such as sediment buildup, which can affect components like dip tubes and heating elements, leading to more frequent and potentially costly repairs.</li>
+            <li><b>Improved Safety: </b>Regular maintenance helps identify and address potential safety issues, such as loose electrical connections or damaged components, before they escalate into major problems.</li>
+          </ol>
+          <p>Understanding these factors can help homeowners anticipate potential repair costs and make informed decisions about whether to repair or replace a faulty water heater.</p>
           <p>
             The average water heater repair cost can vary significantly
             depending on the issue at hand. For a hot water heater, common
