--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -620,7 +620,7 @@ main {
 
 .content-1_maintenance, .content-2_maintenance {
   width: 100%;
-  border: solid 2px #ca0913;
+  box-shadow: 0 0 8px 3px #87878733;
   border-radius: 20px;
   padding: 0% 3% 3%;
 }
@@ -638,6 +638,7 @@ main {
   font-weight: 600;
   font-size: clamp(22px, 5vw, 24px) !important;
   text-shadow: var(--text-shadown-b-h3);
+  text-align: center;
 }
 
 .description_maintenance b {
