--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -141,6 +141,14 @@ const menuitems = [
         path: "/price-list/bbq-grill-repair-cost",
       },
       {
+        title: "Furnace Repair Cost",
+        path: "/price-list/furnace-repair-cost",
+      },
+      {
+        title: "Water Heater Repair Cost",
+        path: "/price-list/water-heater-repair-cost",
+      },
+      {
         title: "Commercial Refrigerator Repair Cost",
         path: "/price-list/commercial-refrigerator-repair-cost",
       },
@@ -179,6 +187,14 @@ const menuitems = [
       {
         title: "Commercial Stove Repair Cost",
         path: "/price-list/commercial-stove-repair-cost",
+      },
+      {
+        title: "Commercial Wine Cooler Repair Cost",
+        path: "/price-list/commercial-wine-cooler-repair-cost",
+      },
+      {
+        title: "Commercial Showcase Refrigerator Repair Cost",
+        path: "/price-list/commercial-showcase-refrigerator-repair-cost",
       },
     ],
   },
