--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -13,6 +13,29 @@ h1 {
     text-shadow: 2.3px 2.3px 3.7px rgb(21 21 21);
 }
 
+.animate-charcter {
+    text-transform: uppercase;
+    background-image: linear-gradient(-225deg,
+        #fff 0%,
+        #000 15%,
+        #111112 67%,
+        #858384 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    /* text-fill-color: transparent; */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 4s linear infinite;
+    display: inline-block;
+    font-size: clamp(35px, 7vw, 60px);
+    line-height: clamp(56px, 8vh, 60px);
+    font-weight: 900;
+  }
+  
+
 h2 {
     text-align: center;
     margin: 6% 0% 3% 0%;
