--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -1,8 +1,11 @@
 :root {
     --table-color: rgb(231 231 231 / 58%);
-    --text-shadown-b-h3: 0.5px 0.5px 0.8px #8f9499;
+    --text-shadown-b-h3: 0.6px 0.6px 1px #8f9499;
 }
 
+ h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
 
 .max-w-screen-xl {
     max-width: 100%;
@@ -37,8 +40,9 @@ h1 {
 
 
 h2 {
+    margin: 0;
+    padding: 0 3%;
     text-align: center;
-    margin: 6% 0% 3% 0%;
     font-size: clamp(24px, 5vw, 28px) !important;
     text-shadow: 1px 1px 1.3px #8f9499;
 }
@@ -95,10 +99,6 @@ main {
     width: 65%;
 }
 
-
-
-
-
 .page213 {
     max-width: 1920px;
     width: 100%;
@@ -106,14 +106,7 @@ main {
     position: relative;
     display: grid;
     margin: 0 auto;
-}
-
-.page213-container {
-    grid-column: 2 / 8;
-    position: relative;
-    position: sticky;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 15px;
 }
 
 
@@ -121,31 +114,7 @@ main {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* левое мменю  */
+/* левое меню  навигации*/
 
 .full_left_menu_r {
     grid-column: 1/2;
@@ -160,18 +129,18 @@ main {
 }
 
 .list_left {
-    background-color: var(--table-color);
+    background-color: rgb(206 206 206);
     border-bottom: 1.5px solid #ca09134d;
-    transition: 0.25s ;
+    transition: 0.25s;
 }
 
 .list_left:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(167, 166, 166);
 }
 
 .list_left a {
     display: flex;
-    
+
 }
 
 #list_left-line {
@@ -179,14 +148,17 @@ main {
 }
 
 .list_left h2 {
-    color: #3f3f3f;
-    text-shadow: 1.2px 1.2px 2px black !important;
-    padding: 4px 20px;
+    color: #3f3f3fff;
+    text-shadow: 1px 1px 1.4px black !important;
+    padding: 2px 14px;
     padding-right: 3px;
     align-self: center;
     font-size: 18px;
     font-weight: 300;
     transition: color 0.3s ease-in-out;
+    margin: 2% 0% 2% 0%;
+    font-size: clamp(24px, 5vw, 28px) !important;
+
 }
 
 .list_left:hover h2 {
@@ -210,13 +182,6 @@ main {
     width: 100%;
     overflow: hidden;
 }
-
-
-
-
-
-
-
 
 
 
@@ -312,6 +277,55 @@ main {
         max-height: 78%;
     }
 }
+
+/* левое меню  навигации*/
+
+
+@media (max-width:1024px) {
+    .page-header-d-full {
+        padding: 5% 0;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+.page213-container {
+    grid-column: 2 / 8;
+    position: relative;
+    position: sticky;
+    margin: 0 2% 0 2% ;
+}    
+
+.content__page-desc-phot {
+    float: left;
+    margin: 10px 10px 10px 0px ;
+}
+
+.content__page-desc h3 {
+    text-shadow: var(--text-shadown-b-h3);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
