--- a/src/components/css-components/style-btn.css
+++ b/src/components/css-components/style-btn.css
@@ -49,7 +49,7 @@
 .button-top-global p {
   line-height: 20px ;
   margin: -5px 0 3px 0 !important;
-  color: #fff;
+  color: #fff !important;
 }
 
 
