--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -304,13 +304,41 @@ main {
     margin: 0 2% 0 2% ;
 }    
 
+.page213-container h2 {
+    margin-bottom: 20px;
+}
+
+.page213-container p {
+    margin-bottom: 10px;
+    color: #262626;
+    font-weight: 400;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.page213-content:nth-child(1){
+    margin: 0 0;
+}
+
+.page213-content {
+    margin: 4% 0;
+}
+
 .content__page-desc-phot {
     float: left;
-    margin: 10px 10px 10px 0px ;
+    margin: 10px 15px 10px 0px ;
+}
+
+.content__page-desc-phot img {
+    /* width: 100%; */
+    max-width: 100%;
+    box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 20%), 3px 2px 3px 0px rgb(0 0 0 / 14%), 3px 3px 14px 0px rgb(0 0 0 / 12%);
+    border-radius: 10px;
 }
 
 .content__page-desc h3 {
+    font-weight: 600;
     text-shadow: var(--text-shadown-b-h3);
+    font-size: clamp(18px, 4vw, 22px) !important;
 }
 
 
